--- a/style.css
+++ b/style.css
@@ -537,6 +537,78 @@ White Background part
 
 /*
  ------------
+which homePod
+ ------------
+ */
+
+.homePod {
+  margin-top: 20px;
+  padding-top: 90px;
+  padding-bottom: 140px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.homePod h4 {
+  font-size: 70px;
+  font-weight: bold;
+}
+
+.homePod-cards {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  gap: 70px;
+}
+.homePod-card img {
+  margin-top: 20px;
+}
+.homePod-card p {
+  margin-bottom: 5px;
+  line-height: 1.2;
+}
+.part {
+  line-gap-override: 10px;
+}
+.homePod-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 300px;
+}
+
+.homePod-title {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.buy-btn {
+  background-color: #2d4fe2;
+  border-radius: 45%;
+  height: 30px;
+  width: 40px;
+  color: white;
+  border: none;
+}
+.home-title {
+  font-weight: bold;
+}
+
+.learn {
+  border: none;
+  background: transparent;
+  color: skyblue;
+}
+.home-hr {
+  width: 70%;
+  opacity: 0.3;
+}
+
+/*
+ ------------
 Footer
  ------------
  */
@@ -878,6 +950,74 @@ White Background part
     flex-direction: column;
     justify-content: center;
     gap: 20px;
+  }
+
+  /*
+ ------------
+which homePod
+ ------------
+ */
+
+  .homePod {
+    margin-top: 0px;
+    padding-top: 30px;
+    padding-bottom: 70px;
+  }
+
+  .homePod h4 {
+    font-size: 40px;
+  }
+
+  .homePod-cards {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: end;
+    gap: 10px;
+  }
+  .homePod-card img {
+    margin-top: 20px;
+  }
+  .homePod-card p {
+    margin-bottom: 5px;
+    line-height: 1.2;
+  }
+  .part {
+    line-gap-override: 10px;
+  }
+  .homePod-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+  }
+
+  .homePod-title {
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+  .buy-btn {
+    background-color: #2d4fe2;
+    border-radius: 45%;
+    height: 30px;
+    width: 40px;
+    color: white;
+    border: none;
+  }
+  .home-title {
+    font-weight: bold;
+  }
+
+  .learn {
+    border: none;
+    background: transparent;
+    color: skyblue;
+  }
+  .home-hr {
+    width: 70%;
+    opacity: 0.3;
   }
 
   /*
