--- a/style.css
+++ b/style.css
@@ -534,6 +534,13 @@ White Background part
   justify-content: end;
   gap: 180px;
 }
+.music-text {
+  font-size: 25px;
+  font-weight: bold;
+}
+.music-logo {
+  height: 20px;
+}
 
 /*
  ------------
@@ -608,6 +615,37 @@ which homePod
 }
 
 /*
+ --------
+ Card
+ -----------
+ */
+
+.footer-sec {
+  background-color: #f5f5f7;
+}
+.others-cards {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  gap: 70px;
+}
+.other-card {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  width: 200px;
+}
+
+.other-card p {
+  line-height: 1;
+  text-align: center;
+}
+
+.delievery-pic {
+  height: 60px;
+}
+
+/*
  ------------
 Footer
  ------------
@@ -619,7 +657,6 @@ Footer
   margin: auto;
 }
 .footer {
-  background-color: white;
   color: black;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -665,6 +702,16 @@ Footer
 .last-foot {
   display: flex;
   justify-content: space-between;
+}
+.foot-logo {
+  height: 15px;
+}
+
+.info {
+  width: 55%;
+  margin: auto;
+  font-size: smaller;
+  opacity: 0.5;
 }
 
 /* Adjust styles as needed */
@@ -1018,6 +1065,33 @@ which homePod
   .home-hr {
     width: 70%;
     opacity: 0.3;
+  }
+
+  /*
+ --------
+ Card
+ -----------
+ */
+
+  .others-cards {
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+  }
+  .other-card {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 200px;
+  }
+
+  .other-card p {
+    line-height: 1;
+    text-align: center;
+  }
+
+  .delievery-pic {
+    height: 60px;
   }
 
   /*
