--- a/style.css
+++ b/style.css
@@ -645,6 +645,30 @@ which homePod
   height: 60px;
 }
 
+/* accessories  */
+
+.accessories {
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+.accessories-img {
+  height: 320px;
+  background-size: cover;
+}
+
+.accessories-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* width: 400px; */
+  text-align: center;
+  line-height: 1.5;
+}
+.accessories-title {
+  font-size: 25px;
+  font-weight: bold;
+}
+
 /*
  ------------
 Footer
@@ -715,26 +739,6 @@ Footer
 }
 
 /* Adjust styles as needed */
-
-/*
- ------------
-Zoom Animation
- ------------
- */
-@keyframes zoom-animation {
-  0% {
-    transform: scale(1);
-    opacity: 0.9;
-  }
-  50% {
-    transform: scale(1.6);
-    opacity: 0.6;
-  }
-  100% {
-    transform: scale(1);
-    opacity: 0.9;
-  }
-}
 
 @media (max-width: 768px) {
   .navbar-links {
@@ -1045,14 +1049,6 @@ which homePod
     font-weight: bold;
   }
 
-  .buy-btn {
-    background-color: #2d4fe2;
-    border-radius: 45%;
-    height: 30px;
-    width: 40px;
-    color: white;
-    border: none;
-  }
   .home-title {
     font-weight: bold;
   }
@@ -1094,6 +1090,16 @@ which homePod
     height: 60px;
   }
 
+  /* accessories  */
+
+  .accessories-img {
+    height: 120px;
+  }
+
+  .accessories-card {
+    flex-direction: column;
+  }
+
   /*
 ------------
 Footer
@@ -1103,5 +1109,25 @@ Footer
   .footer-row {
     display: flex;
     flex-direction: column;
+  }
+}
+
+/*
+ ------------
+Zoom Animation
+ ------------
+ */
+@keyframes zoom-animation {
+  0% {
+    transform: scale(1);
+    opacity: 0.9;
+  }
+  50% {
+    transform: scale(1.6);
+    opacity: 0.6;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0.9;
   }
 }
