--- a/style.css
+++ b/style.css
@@ -660,7 +660,7 @@ which homePod
   display: flex;
   justify-content: center;
   align-items: center;
-  /* width: 400px; */
+  width: 400px;
   text-align: center;
   line-height: 1.5;
 }
@@ -768,7 +768,7 @@ Footer
   /* FullScreen  */
 
   .fullscreen h1 {
-    font-size: 4rem;
+    font-size: 2rem;
   }
 
   /* Features Section */
@@ -875,7 +875,7 @@ All your devices section
 
   .device-background-section {
     background-size: cover;
-    height: 30vh;
+    height: 25vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1097,6 +1097,7 @@ which homePod
   }
 
   .accessories-card {
+    width: 300px;
     flex-direction: column;
   }
 
