--- a/style.css
+++ b/style.css
@@ -686,7 +686,11 @@ Footer
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 .footer-row {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  justify-items: center;
+  width: 70%;
+  margin: auto;
   justify-content: center; /* Distribute columns evenly */
   align-items: start;
   gap: 80px;
@@ -1108,8 +1112,8 @@ Footer
 */
 
   .footer-row {
-    display: flex;
-    flex-direction: column;
+    grid-template-columns: repeat(2, 1fr);
+    width: 80%;
   }
 }
 
