--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ Fullscreen Container
   height: 100%;
   background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="200" height="200" fill="white"><circle cx="10" cy="10" r="0.5" /><circle cx="30" cy="50" r="0.5" /><circle cx="50" cy="80" r="0.5" /><circle cx="70" cy="20" r="0.5" /><circle cx="90" cy="70" r="0.5" /></svg>'); /* White dots SVG image */
   opacity: 0.4; /* Adjust the opacity of stars */
+  animation: animStar 80s infinite;
   pointer-events: none; /* Prevent interaction with the pseudo-element */
 }
 
@@ -1565,5 +1566,14 @@ Zoom Animation
   100% {
     transform: scale(1);
     opacity: 0.9;
+  }
+}
+
+@keyframes animStar {
+  0% {
+    transform: translateY(0px);
+  }
+  100% {
+    transform: translateY(-2000px);
   }
 }
