--- a/style.css
+++ b/style.css
@@ -688,12 +688,12 @@ which homePod
   margin-bottom: 60px;
 }
 .accessories-img {
-  height: 220px;
+  height: 350px;
   background-size: cover;
 }
 
 .accessories-card {
-  background-color: #fafafa;
+  background-color: #f5f5f7;
   border-radius: 10px;
   padding-right: 5px;
   padding-bottom: 5px;
@@ -701,12 +701,14 @@ which homePod
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 450px;
+  width: 98%;
+  margin: 0 50px;
   text-align: center;
   line-height: 1.5;
 }
 .accessories-title {
-  font-size: 25px;
+  font-size: 45px;
+  margin-bottom: -20px;
   font-weight: bold;
 }
 
@@ -1139,7 +1141,7 @@ which homePod
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    width: 200px;
+    width: 300px;
   }
 
   .other-card p {
@@ -1155,6 +1157,11 @@ which homePod
 
   .accessories-img {
     height: 120px;
+  }
+  .accessories-title {
+    font-size: 25px;
+    margin-bottom: -15px;
+    font-weight: bold;
   }
 
   .accessories-card {
@@ -1512,9 +1519,14 @@ which homePod
   .accessories-img {
     height: 140px;
   }
+  .accessories-title {
+    font-size: 25px;
+    margin-bottom: -15px;
+    font-weight: bold;
+  }
 
   .accessories-card {
-    width: 300px;
+    width: 350px;
     flex-direction: column;
   }
 
