--- a/style.css
+++ b/style.css
@@ -641,8 +641,10 @@ which homePod
 
 .learn {
   border: none;
+  font-size: 17px;
+  font-weight: bolder;
   background: transparent;
-  color: skyblue;
+  color: #0066cc;
 }
 .home-hr {
   width: 70%;
@@ -700,21 +702,26 @@ which homePod
 .accessories-card {
   background-color: #f5f5f7;
   border-radius: 10px;
-  padding-right: 5px;
+  /* padding-right: 5px; */
   padding-bottom: 5px;
-  padding-left: 10px;
+  /* padding-left: 10px; */
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 98%;
   margin: 0 50px;
   text-align: center;
   line-height: 1.5;
 }
 .accessories-title {
-  font-size: 45px;
+  font-size: 40px;
   margin-bottom: -20px;
-  font-weight: bold;
+  font-weight: 500;
+}
+.card-title {
+  font-size: 16px;
+  width: 80%;
+  padding-top: 15px;
+  margin: auto;
 }
 
 /*
