--- a/style.css
+++ b/style.css
@@ -690,7 +690,7 @@ which homePod
 .accessories {
   background-color: white;
   margin-top: 60px;
-  padding-top: 40px;
+  /* padding-top: 40px; */
   padding-bottom: 40px;
   margin-bottom: 60px;
 }
@@ -708,7 +708,7 @@ which homePod
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0 50px;
+  /* margin: 0 50px; */
   text-align: center;
   line-height: 1.5;
 }
@@ -1168,21 +1168,21 @@ which homePod
   /* accessories  */
 
   .accessories-img {
-    height: 120px;
-    width: 100%;
+    height: 220px;
+    width: 95%;
   }
   .accessories-title {
-    font-size: 20px;
+    font-size: 25px;
     margin-bottom: -15px;
     font-weight: bold;
   }
 
   .accessories-card {
-    width: 300px;
+    width: 90%;
     flex-direction: column;
   }
   .card-title {
-    font-size: 16px;
+    font-size: 20px;
     width: 90%;
     padding-top: 15px;
     margin: auto;
@@ -1206,7 +1206,7 @@ Tablet Devices Responsive
 ---------------
 */
 
-@media (min-width: 769px) and (max-width: 1024px) {
+@media only screen and (min-width: 769px) and (max-width: 1500px) {
   .navbar-toggle {
     display: none;
   }
@@ -1396,7 +1396,7 @@ Siri section
     max-width: 120px; /* Adjust the max width of the image as needed */
     height: auto;
     margin-bottom: 20px;
-    margin-right: 15px; /* Adjust the spacing between the image and text */
+    margin-right: 15px;
   }
 
   .siri-container h2 {
@@ -1542,7 +1542,8 @@ which homePod
   /* accessories  */
 
   .accessories-img {
-    height: 140px;
+    height: 220px;
+    width: 100%;
   }
   .accessories-title {
     font-size: 25px;
@@ -1551,8 +1552,9 @@ which homePod
   }
 
   .accessories-card {
-    width: 350px;
-    flex-direction: column;
+    display: flex;
+    width: 90%;
+    flex-direction: row;
   }
 
   /*
