--- a/style.css
+++ b/style.css
@@ -351,8 +351,9 @@ All your devices section
 .device-background-section {
   background-image: url("./assets/hand.jpg"); /* Path to your background image */
   background-position: right;
+  background-size: contain;
   background-repeat: no-repeat;
-  /* height: 100vh; Full screen height */
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -372,8 +373,9 @@ High IQ
 .high-bg {
   display: block;
   margin: 0 auto;
-  width: 60%; /* Set the width to 70% */
-  background-size: cover;
+  width: 40%;
+  margin-top: 400px;
+  background-size: contain;
   height: auto; /* Allow the height to adjust proportionally */
   border-radius: 30px;
 }
@@ -403,11 +405,25 @@ High IQ
   color: #d1cfcf;
 }
 
+.siri-bg {
+  display: block;
+  margin: 0 auto;
+  width: 40%;
+  background-size: contain;
+  height: auto; /* Allow the height to adjust proportionally */
+  border-radius: 30px;
+}
+
 /*
 -------------
 Siri section
 -------------
 */
+.hey-siri {
+  font-size: 60px;
+  width: 90%;
+  font-weight: bold;
+}
 
 .siri-container {
   display: flex;
@@ -453,6 +469,7 @@ Siri section
 
 .hey-siri {
   font-size: 60px;
+  width: 60%;
   font-weight: bold;
 }
 
@@ -678,6 +695,7 @@ which homePod
   border: 1px solid gray; /* Corrected the border property */
   justify-content: center;
   align-items: flex-start;
+  margin-bottom: 40px;
   padding-top: 10px;
   width: 400px;
 }
@@ -694,18 +712,17 @@ which homePod
 /* accessories  */
 
 .accessories {
-  background-color: white;
-  margin-top: 60px;
-  /* padding-top: 40px; */
-  padding-bottom: 40px;
-  margin-bottom: 60px;
+  background-color: rgba(255, 255, 255, 0.932);
+  padding: 60px;
 }
 .accessories-img {
   height: 350px;
+  width: 100%;
   background-size: cover;
 }
 
 .accessories-card {
+  height: 500px;
   background-color: #f5f5f7;
   border-radius: 10px;
   /* padding-right: 5px; */
@@ -844,30 +861,35 @@ Mobile Devices Responsive
 
   /* Features Section */
   .features {
-    padding: 0px;
-    width: 100%;
+    padding: 0 10px;
+    width: 80%;
+    margin: auto;
   }
   .features p {
-    font-size: 2rem;
+    font-weight: bold;
+    font-size: 1.5rem;
   }
 
   /* profound section  */
 
   .background-section {
-    margin-top: 200px;
-    width: 100vw;
-    padding: 0px;
+    background-size: contain;
+    height: 400px;
   }
   .background-section h3 {
-    font-size: 5rem; /* Large text size */
+    font-size: 4rem; /* Large text size */
     margin: 0;
     padding: 0;
+  }
+  .background-section p {
+    font-size: 18px;
+    width: 50%;
   }
 
   /* High-fidelity audio section */
   .high-fidelity-section {
     margin-top: 200px;
-    width: 90%;
+    width: 70%;
   }
 
   .high-fidelity-section h2 {
@@ -886,16 +908,26 @@ Mobile Devices Responsive
  */
 
   .homepod-details-container {
-    width: 100%;
+    width: 70%;
     margin: auto;
     flex-direction: column;
   }
 
   .homepod-image img {
-    height: 445px !important;
-    width: 352px !important;
+    height: 245px !important;
+    width: 220px !important;
     height: auto;
     margin: 0%;
+  }
+
+  .apple-background-section {
+    width: 100%;
+    background-size: contain;
+    height: 500px;
+    margin-bottom: 100px;
+  }
+  .apple {
+    padding-top: 300px;
   }
 
   /*
@@ -910,6 +942,8 @@ Mobile Devices Responsive
     border-radius: 0px;
   }
   .content-container {
+    width: 70%;
+    margin: auto;
     margin-top: 30px;
     flex-direction: column;
   }
@@ -945,15 +979,13 @@ All your devices section
   */
 
   .device-background-section {
-    background-size: cover;
-    height: 25vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 10px;
+    width: 70%;
+    margin: auto;
+    background-size: contain;
+    height: 400px;
   }
   .device {
-    margin-top: 250px;
+    margin-top: 280px;
   }
   .ar {
     padding-left: 20px;
@@ -970,7 +1002,7 @@ High IQ
   }
 
   .high-iq {
-    width: 100%;
+    width: 70%;
     margin: auto;
   }
 
@@ -982,7 +1014,7 @@ High IQ
   .high-text {
     font-size: 40px;
     width: 95%;
-    padding-left: 20px;
+    padding-left: 10px;
     margin: auto;
     font-weight: bold;
   }
@@ -1001,19 +1033,19 @@ Siri section
 
   .siri-container {
     display: flex;
-    width: 100%;
+    flex-direction: column;
+    width: 70%;
     padding-left: 20px;
     margin: auto;
     align-items: start;
     justify-content: start;
-    margin-bottom: -20px;
+    margin-bottom: 2px;
   }
 
   .siri-container img {
-    max-width: 100px; /* Adjust the max width of the image as needed */
+    width: 50px; /* Adjust the max width of the image as needed */
     height: auto;
-    margin-bottom: 25px;
-    margin-right: 10px; /* Adjust the spacing between the image and text */
+    margin-bottom: 2px;
   }
 
   .siri-container h2 {
@@ -1021,8 +1053,14 @@ Siri section
   }
 
   .siri-p {
-    width: 90%;
+    font-size: 18px;
+    width: 50%;
     margin: auto;
+  }
+  .hey-siri {
+    font-size: 18px;
+    width: 100%;
+    font-weight: bold;
   }
 
   /*
@@ -1033,7 +1071,20 @@ Siri section
 
   .card-container {
     grid-template-columns: repeat(1, 1fr);
-    width: 90%;
+    width: 65%;
+  }
+  .card img {
+    width: 30%;
+    height: auto;
+  }
+
+  .siri-bg {
+    display: block;
+    margin: 50px auto;
+    width: 80%;
+    background-size: contain;
+    height: auto; /* Allow the height to adjust proportionally */
+    border-radius: 30px;
   }
 
   /*
@@ -1041,6 +1092,17 @@ Siri section
 White Background part
 ------------
 */
+  .ar-card {
+    width: 70%;
+    margin: auto;
+  }
+
+  .circle-img {
+    margin-top: 40px;
+    margin-left: 80px;
+    width: 40px;
+    margin: auto;
+  }
 
   .ar {
     padding-top: 40px;
@@ -1050,19 +1112,29 @@ White Background part
   }
 
   .ar-img {
-    width: 90%;
+    display: flex;
+    width: 200px;
+    margin: auto;
   }
+
   .ar-title {
-    font-size: 60px;
+    text-align: center;
+    font-size: 40px;
     font-weight: bold;
     line-height: 1; /* Adjust line height to reduce the gap */
   }
 
   .ar-details {
-    font-size: 20px;
+    text-align: center;
+    font-size: 12px;
+    padding: 0 20px;
     font-weight: bold;
     opacity: 0.4;
     line-height: 1.5; /* Adjust line height to reduce the gap */
+  }
+  .music-card {
+    width: 70%;
+    margin: auto;
   }
 
   .music-details {
@@ -1077,6 +1149,19 @@ White Background part
     padding-left: 20px;
     display: flex;
     flex-direction: column;
+    gap: 20px;
+  }
+
+  .br-title {
+    text-align: center;
+    font-size: 30px;
+  }
+  .music-text {
+    margin-left: 40px;
+    font-size: 25px;
+    font-weight: bold;
+  }
+  .ar-img {
     gap: 20px;
   }
 
@@ -1184,7 +1269,7 @@ which homePod
   }
 
   .accessories-card {
-    width: 90%;
+    max-width: 120%;
     flex-direction: column;
   }
   .card-title {
@@ -1216,6 +1301,10 @@ Tablet Devices Responsive
   .navbar-toggle {
     display: none;
   }
+  .nav-hr {
+    width: 70%;
+    opacity: 0.3;
+  }
 
   .navbar-links li {
     margin: 0 15px;
@@ -1226,7 +1315,7 @@ Tablet Devices Responsive
   /* FullScreen  */
 
   .fullscreen h1 {
-    font-size: 3rem;
+    font-size: 4rem;
   }
 
   /* Features Section */
@@ -1235,7 +1324,7 @@ Tablet Devices Responsive
     width: 100%;
   }
   .features p {
-    font-size: 1.5rem;
+    font-size: 2rem;
   }
 
   /* profound section  */
@@ -1254,7 +1343,7 @@ Tablet Devices Responsive
   /* High-fidelity audio section */
   .high-fidelity-section {
     margin-top: 100px;
-    width: 80%;
+    width: 70%;
   }
 
   .high-fidelity-section h2 {
@@ -1266,6 +1355,23 @@ Tablet Devices Responsive
     margin-right: 0;
   }
 
+  /* 
+-------------
+dynamic as a duo
+--------------
+  */
+
+  .apple-background-section {
+    width: 100%;
+    background-size: contain;
+    height: 500px;
+    margin-bottom: 100px;
+  }
+
+  .apple {
+    padding-top: 300px;
+  }
+
   /*
 ---------------
  homePod details section  
@@ -1273,9 +1379,13 @@ Tablet Devices Responsive
  */
 
   .homepod-details-container {
-    width: 80%;
+    width: 50%;
     margin: auto;
-    flex-direction: row;
+    flex-direction: column;
+  }
+
+  .homepod-text p {
+    opacity: 0.5 50%;
   }
 
   .homepod-image img {
@@ -1283,6 +1393,24 @@ Tablet Devices Responsive
     width: 352px !important;
     height: auto;
     margin: 0;
+  }
+
+  /* 
+-------------
+All your devices section
+--------------
+  */
+
+  .device-background-section {
+    background-size: contain;
+    height: 500px;
+  }
+  .device {
+    margin-top: 250px;
+  }
+  .ar {
+    padding-left: 20px;
+    gap: 0px;
   }
 
   /*
@@ -1297,19 +1425,19 @@ Tablet Devices Responsive
     border-radius: 0;
   }
   .content-container {
-    padding-left: 30px;
-    padding-right: 30px;
+    padding: 0 280px;
     margin-top: 20px;
+    gap: 2px;
+    justify-items: start;
     flex-direction: row;
   }
   .content-container h3 {
-    width: 60%;
-    margin: auto;
+    font-size: 18px;
+    width: 50%;
   }
   .content-container p {
-    font-size: 18px;
-    width: 60%;
-    margin: auto;
+    font-size: 14px;
+    width: 80%;
   }
   /*
 -------------
@@ -1319,7 +1447,7 @@ image template section
 */
 
   .container {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(7, 1fr);
     gap: 20px;
   }
 
@@ -1332,14 +1460,13 @@ image template section
 All your devices section
 --------------
   */
-
-  .device-background-section {
-    background-size: cover;
-    height: 40vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 150px;
+  .background-section {
+    background-size: contain;
+    height: 500px;
+  }
+  .background-section p {
+    font-size: 18px;
+    width: 30%;
   }
   .device {
     margin-top: 430px;
@@ -1354,7 +1481,6 @@ High IQ
 -------------
 */
   .high-bg {
-    width: 100%;
     margin-top: 200px;
   }
 
@@ -1365,33 +1491,46 @@ High IQ
 
   .high-iq-p {
     font-size: 18px;
-    margin-left: 30px;
+    margin-left: 60px;
   }
 
   .high-text {
     font-size: 35px;
     width: 90%;
-    padding-left: 30px;
+    padding-left: 15px;
     margin: auto;
     font-weight: bold;
   }
 
   .high-text-p2 {
-    font-size: 22px;
+    font-size: 18px;
     padding-bottom: 20px;
     width: 85%;
   }
-
+  .siri-bg {
+    display: block;
+    margin: 50px auto;
+    width: 80%;
+    background-size: contain;
+    height: auto; /* Allow the height to adjust proportionally */
+    border-radius: 30px;
+  }
   /*
 -------------
 Siri section
 -------------
 */
 
+  .hey-siri {
+    font-size: 25px;
+    width: 100%;
+    font-weight: bold;
+  }
+
   .siri-container {
     display: flex;
     width: 70%;
-    padding-left: 30px;
+    padding-left: 10px;
     margin: auto;
     align-items: start;
     justify-content: start;
@@ -1410,8 +1549,9 @@ Siri section
   }
 
   .siri-p {
-    width: 85%;
-    margin: auto;
+    width: 60%;
+    padding-right: 80px;
+    font-size: 15px;
   }
 
   /*
@@ -1434,12 +1574,14 @@ White Background part
   .ar {
     padding-top: 50px;
     display: flex;
-    flex-direction: column;
-    gap: 10px;
+    padding: 0 30px;
+    gap: 50;
   }
 
   .ar-img {
-    width: 80%;
+    width: 200px;
+    margin-top: 90px;
+    height: auto;
   }
   .br-title {
     margin-left: -180px;
@@ -1448,7 +1590,7 @@ White Background part
     line-height: 1; /* Adjust line height to reduce the gap */
   }
   .ar-title {
-    font-size: 50px;
+    font-size: 30px;
     font-weight: bold;
     line-height: 1; /* Adjust line height to reduce the gap */
   }
@@ -1469,12 +1611,21 @@ White Background part
     margin-top: 30px;
     padding-top: 60px;
     padding-bottom: 70px;
-    padding-left: 30px;
+    padding-left: 120px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
     gap: 20px;
   }
+  .music-text {
+    margin-left: -180px;
+    font-size: 25px;
+    font-weight: bold;
+  }
 
+  .br-title {
+    font-size: 30px;
+  }
   /*
  ------------
 which homePod
@@ -1531,13 +1682,14 @@ which homePod
   }
   .other-card {
     display: flex;
+
     justify-content: center;
     align-items: flex-start;
-    width: 350px;
+    width: 300px;
   }
 
   .other-card p {
-    line-height: 1;
+    line-height: 1.5;
     text-align: center;
   }
 
@@ -1559,8 +1711,16 @@ which homePod
 
   .accessories-card {
     display: flex;
+    padding: 10px 0;
     width: 90%;
     flex-direction: row;
+  }
+
+  .tv {
+    padding-top: 20px;
+    font-size: small;
+    width: 85%;
+    margin: auto;
   }
 
   /*
@@ -1570,8 +1730,8 @@ Footer
 */
 
   .footer-row {
-    grid-template-columns: repeat(3, 1fr);
-    width: 80%;
+    grid-template-columns: repeat(5, 1fr);
+    width: 90%;
   }
 }
 
